--- a/index.css
+++ b/index.css
@@ -1,8 +1,13 @@
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
 body {
     background-color: black;
     color: white;
     text-align: center;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 button {
@@ -11,4 +16,14 @@ button {
     background-color: ghostwhite;
     border-radius: 10px;
     font-weight: bold;
+    margin-bottom: 80px;
 }
+
+h1 {
+    padding: 8%;
+}
+
+h3 {
+    animation: fadeIn 4s;
+}
+
